# RTCVPSocketIO

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-framework.sh  test_packet.cpp  test_packet_interfaces.cpp  test_packet_new.cpp
.github/workflows/: ci.yml  objective-c-xcode.yml
Category/: RTCVPACKManager+Monitoring.h  RTCVPACKManager+Monitoring.m  RTCVPSocketEngine+EnginePollable.h  RTCVPSocketEngine+EnginePollable.m  RTCVPSocketEngine+EngineWebsocket.h  RTCVPSocketEngine+EngineWebsocket.m
LYMVPSocketIO/LYMVPSocketIO/: CMakeLists.txt  Info.plist  LYMVPSocketIO.h  LYMVPSocketIO.m
LYMVPSocketIO/LYMVPSocketIO.xcodeproj/: project.pbxproj
LYMVPSocketIO/LYMVPSocketIO/Category/: RTCVPSocketEngine+EnginePollable.h  RTCVPSocketEngine+EnginePollable.m  RTCVPSocketEngine+EngineWebsocket.h  RTCVPSocketEngine+EngineWebsocket.m
LYMVPSocketIO/LYMVPSocketIO/Source/: RTCVPACKManager.h  RTCVPSocketIOProtocolVersion.h  RTCVPSocketLogger.h  RTCVPSocketPacket.mm  RTCVPStringReader.h  RTCVPStringReader.m
LYMVPSocketIO/LYMVPSocketIO/Source/utils/: RTCVPTimeoutManager.h  RTCVPTimer.h  RTCVPTimer.m
LYMVPSocketIO/LYMVPSocketIO/jetfire/: RTCJFRWebSocket.h  RTCJFRWebSocket.m
LYMVPSocketIO/LYMVPSocketIO/lib/: sio_ack_manager.cpp  sio_ack_manager.h  sio_ack_manager_interface.h  sio_client_core.cc  sio_client_core.h  sio_jsoncpp_binary_helper.hpp  sio_packet.cc  sio_packet.cpp  sio_packet.h  sio_packet_builder.cpp  sio_packet_builder.h  sio_packet_helper.h  sio_packet_impl.cc  sio_packet_impl.h  sio_packet_parser.cc  sio_packet_parser.h  sio_packet_printer.hpp  sio_packet_types.cpp  sio_packet_types.h  sio_smart_buffer.hpp  test_sio_packet.cpp
LYMVPSocketIO/LYMVPSocketIO/lib/test/: main.cpp  test_client_core.cpp  test_client_core.h  test_rtcvp_binary.cpp  test_sio_binary_packet.cpp  test_sio_packet.cpp  test_sio_packet.h
LYMVPSocketIO/LYMVPSocketIO/resource/: sio_v2_js_struct.md  sio_v3_js_struct.md
LYMVPSocketIO/LYMVPSocketIO/src/: RTCVPACKManager.m  RTCVPProbe.h  RTCVPSocketEngine+Private.h  RTCVPSocketEngine.m  RTCVPSocketEngineProtocol.h  RTCVPSocketIOClient.h  RTCVPSocketIOClient.mm  RTCVPSocketIOConfig.h  RTCVPSocketIOProtocolVersion.h  RTCVPSocketLogger.h  RTCVPSocketLogger.m  RTCVPSocketPacket.h  RTCVPSocketPacket.mm  RTCVPSocketPacketBridge.h  RTCVPSocketPacketBridge.mm
LYMVPSocketIO/LYMVPSocketIO/src/utils/: NSString+RTCVPSocketIO.h  RTCVPTimeoutManager.m
LYMVPSocketIO/LYMVPSocketIOTests/: LYMVPSocketIOCppTests.mm  LYMVPSocketIOTests.m
LYMVPSocketIO/RTCVPSocketIOMAC.xcodeproj/: project.pbxproj
RTCVOSocketIO.xcworkspace/: contents.xcworkspacedata
Source/: RTCDefaultSocketLogger.h  RTCDefaultSocketLogger.m  RTCVPACKManager.h  RTCVPACKManager.m  RTCVPAFNetworkReachabilityManager.h  RTCVPProbe.h  RTCVPProbe.m  RTCVPSocketAck.h  RTCVPSocketAck.m  RTCVPSocketAckEmitter.h  RTCVPSocketAckEmitter.m  RTCVPSocketAckManager.h  RTCVPSocketAckManager.m  RTCVPSocketAnyEvent.h  RTCVPSocketAnyEvent.m  RTCVPSocketEngine+Private.h  RTCVPSocketEngine.h  RTCVPSocketEngine.m  RTCVPSocketEngineProtocol.h  RTCVPSocketIO.h  RTCVPSocketIOClient.h  RTCVPSocketIOClient.m  RTCVPSocketIOClient.mm  RTCVPSocketIOClientProtocol.h  RTCVPSocketIOConfig.h  RTCVPSocketIOConfig.m  RTCVPSocketIOProtocolVersion.h  RTCVPSocketLogger.h  RTCVPSocketLogger.m  RTCVPSocketOnAckCallback.h  RTCVPSocketOnAckCallback.m  RTCVPSocketPacket.h  RTCVPSocketPacket.m  sio_packet.cpp  sio_packet.h  test_sio_packet.cpp
Source/utils/: NSString+RTCVPSocketIO.m  NSString+Random.h  NSString+Random.m  RTCDefaultSocketLogger.h  RTCDefaultSocketLogger.m  RTCVPAFNetworkReachabilityManager.h  (+4 more)
VPSocketIO/: ViewController.m
VPSocketIO.xcodeproj/: project.pbxproj
VPSocketIOAppTests/: VPSocketIOAppTests.m
VPSocketIOTests/: VPSocketIOTests.m
jetfire/: RTCJFRSecurity.h  RTCJFRSecurity.m  RTCJFRWebSocket.h  RTCJFRWebSocket.m
lib/: sio_jsoncpp_binary_helper.hpp  sio_packet.cpp  sio_packet.h  sio_packet_impl.cc  sio_packet_parser.cpp
testServer/: TESTING.md  cert.pem  index.html  key.pem  package-lock.json  package.json  run.sh  server.js  test.css  test.html  test.js  test_v2.html  test_v2.js  test_v3.html  test_v3.js
third_part/HTTPS_Client/: CMakeLists.txt  https.c  https.h  main.c  run.sh
third_part/HTTPS_Client/mbedtls/: CMakeLists.txt
third_part/libwebrtc/: CMakeLists.txt  README_CMAKE.md  absl_alternative.h
third_part/libwebrtc/api/: CMakeLists.txt  ref_counted_base.h
third_part/libwebrtc/common_audio/: CMakeLists.txt
third_part/libwebrtc/rtc_base/: CMakeLists.txt  buffer.h  byte_buffer.cc  byte_buffer.h  byte_order.h  checks.h  event.cc  logging.cc  logging.h  message_queue.cc  physical_socket_server.cc  platform_thread_types.cc  sanitizer.h  string_to_number.h  thread.cc
third_part/libwebrtc/rtc_base/experiments/: CMakeLists.txt  jitter_upper_bound_experiment.cc
third_part/libwebrtc/rtc_base/strings/: CMakeLists.txt  string_builder.h
third_part/libwebrtc/rtc_base/synchronization/: CMakeLists.txt  rw_lock_win.cc  rw_lock_win.h  sequence_checker.cc  sequence_checker.h  yield_policy.cc
third_part/libwebrtc/rtc_base/system/: CMakeLists.txt  arch.h
third_part/libwebrtc/rtc_base/task_utils/: CMakeLists.txt  repeating_task.h  to_queued_task.h
third_part/libwebrtc/rtc_base/win/: CMakeLists.txt
third_part/libwebrtc/socketio/: CMakeLists.txt  socketio_client.cc  socketio_client.h  socketio_delegate.h  socketio_packet.cc  socketio_packet.h  socketio_protocol.cc  socketio_protocol.h  socketio_thread_safe_queue.h
third_part/libwebrtc/system_wrappers/: CMakeLists.txt
third_part/libwebrtc/system_wrappers/source/: rtp_to_ntp_estimator.cc
third_part/libwebrtc/third_part/absl/: CMakeLists.txt
third_part/libwebrtc/third_part/absl/strings/: string_view.cc  string_view.h
third_part/libwebrtc/third_part/absl/types/: optional.h
third_part/libwebrtc/third_part/jsoncpp/: CMakeLists.txt
third_part/libwebrtc/third_part/jsoncpp/include/: CMakeLists.txt
third_part/libwebrtc/third_part/jsoncpp/include/json/: value.h
third_part/libwebrtc/third_part/jsoncpp/src/lib_json/: json_value.cpp
(+19 files in other folders)
